--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.5",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "twit": "^2.2.10"
   }
 }
