--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
     "multer": "^1.4.0",
+    "node-image-hash": "^1.0.6",
     "twit": "^2.2.11"
   }
 }
