--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "multer": "^1.4.0",
     "node-image-hash": "^1.0.6",
     "twit": "^2.2.11"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
