--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/NiciusB/valentine-cards-bot#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
     "multer": "^1.4.0",
     "node-image-hash": "^1.0.6",
-    "twit": "^2.2.11"
+    "twitter-lite": "^0.9.4"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
